[project]
name = "inventory-sync-service"
version = "0.1.0"
description = "Async inventory synchronization service (Amazon & eBay) using FastAPI and hexagonal architecture."
authors = [
    {name = "Roman Zidinov",email = "roman.zidinov.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.123.7,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
mypy = "^1.19.0"
ruff = "^0.14.7"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
